Print questions in HTML

--- a/resources/static/index.html
+++ b/resources/static/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 
 <h1>My First JavaScript</h1>
 
+<div id="questions"></div>
 
 </body>
-</html> 
+</html>
