printing question & answers alternatively

--- a/resources/static/index.html
+++ b/resources/static/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<h1>My First JavaScript</h1>
+<h1>JumpForm</h1>
 
 <div id="questions"></div>
-
+<div id="answers"></div>
 </body>
 </html>
