Add background color to body

--- a/resources/static/index.html
+++ b/resources/static/index.html
@@ -3,12 +3,12 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="main.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<h1>JumpForm</h1>
 
-<h1>JumpForm</h1>
-
-<div id="questions"></div>
-<div id="answers"></div>
+	<div id="questions"></div>
+	<div id="answers"></div>
 </body>
 </html>
