--- a/resources/static/form.html
+++ b/resources/static/form.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="main.js"></script>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
 	<h1>JumpForm</h1>
