--- a/resources/static/form.html
+++ b/resources/static/form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="form.js"></script>
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
