--- a/resources/static/results.html
+++ b/resources/static/results.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-sm-4">.col-sm-4</div>
   <div class="col-sm-8">
-  	<div class= "container1">
+  	<!--<div class= "container1">
 	  	<div class="question1">Question 1 : What is your gender?</div>
 	  	<div class = "option1">Male
 	  		<div class="progress">
@@ -26,7 +26,7 @@
   				<div class="progress-bar" role="progressbar1" aria-valuenow="30"
   				aria-valuemin="0" aria-valuemax="100" style="width:30%">
     			30%
-  			</div>
+  			</div>-->
   			</div>
   		</div>
   		
