Added progress bars

--- a/resources/static/results.html
+++ b/resources/static/results.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="row">
-  <div class="col-sm-4">.col-sm-4</div>
+  <div class="col-sm-4">JumpForm</div>
   <div class="col-sm-8">
   	<!--<div class= "container1">
 	  	<div class="question1">Question 1 : What is your gender?</div>
