Completed Result Summary

--- a/resources/static/form.html
+++ b/resources/static/form.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
-	<h1>JumpForm</h1>
+	<h1>Dashboard</h1>
 	<div id="question"></div>
 </body>
 </html>
