--- a/resources/static/results.html
+++ b/resources/static/results.html
@@ -6,27 +6,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="results.css">
 	<script type="text/javascript" src="results.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
 </head>
 <body>
 <div class="row">
-  <div class="col-sm-4">JumpForm</div>
+  <div class="col-sm-4"><h3>Dashboard</h3></div>
   <div class="col-sm-8">
-  	<!--<div class= "container1">
-	  	<div class="question1">Question 1 : What is your gender?</div>
-	  	<div class = "option1">Male
-	  		<div class="progress">
-  				<div class="progress-bar" role="progressbar1" aria-valuenow="70"
-  				aria-valuemin="0" aria-valuemax="100" style="width:70%">
-    			70%
-  			</div>
-  			</div>
-  		</div>
-  		<div class = "option2">Female
-	  		<div class="progress">
-  				<div class="progress-bar" role="progressbar1" aria-valuenow="30"
-  				aria-valuemin="0" aria-valuemax="100" style="width:30%">
-    			30%
-  			</div>-->
   			</div>
   		</div>
   		
