--- a/resources/static/form.html
+++ b/resources/static/form.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
+	<div class="topnav">
+  <a class="active" href="#home">JumpForms</a>
+</div>
 	<h1>Dashboard</h1>
 	<div id="question"></div>
 	<button id="submit" type="button" onclick="submit()">Submit</button>
