--- a/resources/static/results.html
+++ b/resources/static/results.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<div class="topnav">
+  <a class="active" href="#home"><b>JumpForms</b></a>
+</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -10,7 +13,7 @@
 </head>
 <body>
 <div class="row">
-  <div class="col-sm-4"><h3>Dashboard</h3></div>
+  <div class="col-sm-4"><h3>Summary</h3></div>
   <div class="col-sm-8">
   			</div>
   		</div>
