builder builder builder

--- a/resources/static/builder.html
+++ b/resources/static/builder.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 
-	<div class="setDataWrap">
-  		<button id="getJS" type="button">Get JS Data</button>
+	<div class="setDataWrap"></div>
+	<div id="build-wrap">
+		<button id="publish" type="button">Publish</button>
 	</div>
-	<div id="build-wrap"></div>
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
