Add dialogue box and close btn

--- a/resources/static/builder.html
+++ b/resources/static/builder.html
@@ -4,11 +4,15 @@
 </head>
 <body>
 
+	<div class="link-box">
+		<div class="close" onclick="closeBox()">&times;</div>
+		<div class="url-link">Form URL: <input type="text" name="url"></div>
+	</div>
+
 	<div class="setDataWrap"></div>
 	<div id="build-wrap">
 		<button id="publish" type="button">Publish</button>
 	</div>
-
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script
