--- a/resources/static/results.html
+++ b/resources/static/results.html
@@ -7,8 +7,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="results.css">
-	<script type="text/javascript" src="results.js"></script>
+	<link rel="stylesheet" type="text/css" href="../results.css">
+	<script type="text/javascript" src="../results.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
 </head>
 <body>
