--- a/resources/static/form.html
+++ b/resources/static/form.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="form.js"></script>
 	<link rel="stylesheet" type="text/css" href="form.css">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
 </head>
 <body>
 	<div class="topnav">
   <a class="active" href="#home">JumpForms</a>
 </div>
-	<h1>Dashboard</h1>
+	<h3>Form</h3>
+	  <div class="col-sm-2"></div>
+  <div class="col-sm-10">
+  			</div>
+  		</div>
 	<div id="question"></div>
 	<button id="submit" type="button" onclick="submit()">Submit</button>
 	
