--- a/resources/static/builder.html
+++ b/resources/static/builder.html
@@ -15,10 +15,7 @@
 	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script
-  src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
-  integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 	<script src="dist/form-builder.min.js"></script>
 	<script src="dist/form-render.min.js"></script>
 	<script type="text/javascript" src="builder.js"></script>
